--- a/WPF_DataBinding_ClassWork_Converter/MainWindow.xaml
+++ b/WPF_DataBinding_ClassWork_Converter/MainWindow.xaml
@@ -6,7 +6,39 @@
         xmlns:local="clr-namespace:WPF_DataBinding_ClassWork_Converter"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    <Window.Resources>
+        <local:GeneralForecastToBrushConverter x:Key="gf2brush" />
+    </Window.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal">
+            <TextBlock Text="Select number of days to forecast:" FontSize="15" VerticalAlignment="Center" Margin="4"/>
+            <ComboBox x:Name="_days" SelectedIndex="0" Width="50"/>
+            <Button Margin="4" Content="Get Forecast" FontSize="16" Click="button_getForecast"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="4" TextBlock.FontSize="15">
+            <TextBlock Text="Select units:" Margin="4"/>
+            <RadioButton Content="Celsius" IsChecked="True" Margin="10,4"/>
+            <RadioButton Content="Fahrenheit" Margin="20,4"/>
+        </StackPanel>
+        <ListBox ItemsSource="{Binding}" Grid.Row="2" HorizontalContentAlignment="Stretch">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Border Margin="4" BorderBrush="Black" Padding="4" BorderThickness="2" Background="{Binding GeneralForecast, Converter={StaticResource gf2brush}}">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontSize="20" FontWeight="Bold" Text="{Binding GeneralForecast}"/>
+                            <TextBlock FontSize="16" Margin="10,0,0,0" VerticalAlignment="Bottom" Text="{Binding TemperatureLow, StringFormat='Low: \{0:N2\}'}"/>
+                            <TextBlock FontSize="16" Margin="10,0,0,0" VerticalAlignment="Bottom" Text="{Binding TemperatureHigh, StringFormat='High: \{0:N2\}'}"/>
+                            <TextBlock FontSize="16" Margin="20,0,0,0" VerticalAlignment="Bottom" Text="{Binding Percipitation, StringFormat='Percip: \{0:N2\}'}"/> 
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         
     </Grid>
 </Window>
